--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,18 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+ .scrollbar-thin {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(156 163 175) rgb(243 244 246);
+  }
+.scrollbar-overlay {
+    overflow: overlay;
+    scrollbar-width: thin; /* Firefox */
+    scrollbar-color: rgba(156, 163, 175, 0.8) transparent;
+    
+  }
+.scrollbar-overlay-auto {
+    overflow: auto;
+    scrollbar-width: none; /* Firefox - скрываем по умолчанию */
+  }
+
